<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">红楼头条在线视频</string>

    <string name="main_page">小视频</string>
    <string name="video">发现</string>
    <string name="following">推荐</string>
    <string name="mine">我的</string>

    <string name="app_path_cache">/cache/</string>
    <string name="app_path">/honglou</string>

    <!-- 版本升级 -->
    <string name="activity_soft_update_tittle_loading">升级中。。。</string>
    <string name="activity_soft_update_tittle_warning">版本更新</string>
    <string name="activity_soft_update_dialog_confirm_tip">更新</string>
    <string name="activity_soft_update_install_tips">最新版本已下载，是否安装？</string>
    <string name="activity_soft_update_no_notify">下次不再提示</string>
    <string name="activity_soft_update_install_ensure">更新</string>
    <string name="activity_soft_update_install_cancel">取消</string>
    <string name="my_favorite">我的收藏</string>
    <string name="feedback">帮助与反馈</string>
    <string name="push_setting">推送设置</string>
    <string name="current_version">当前版本</string>
    <string name="clear_cache">清除缓存</string>
    <string name="foot_mark">浏览足迹</string>

</resources>
