<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_footmark"
        style="@style/mineitem"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/me_icon_history"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/foot_mark"
            android:textColor="@color/home_tab_selected_color"
            android:textSize="14sp"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/enter_arrow"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="77dp"/>

    <LinearLayout
        android:id="@+id/ll_my_favorite"
        style="@style/mineitem"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/me_icon_like"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/my_favorite"
            android:textColor="@color/home_tab_selected_color"
            android:textSize="14sp"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/enter_arrow"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_feedback"
        style="@style/mineitem"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/me_icon_feedback"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/feedback"
            android:textColor="@color/home_tab_selected_color"
            android:textSize="14sp"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/enter_arrow"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_push"
        style="@style/mineitem"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/me_icon_push"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/push_setting"
            android:textColor="@color/home_tab_selected_color"
            android:textSize="14sp"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/enter_arrow"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_version"
        style="@style/mineitem"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/me_icon_version"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/current_version"
            android:textColor="@color/home_tab_selected_color"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_text_color"
            android:textSize="12sp"
            tools:text="V 2.0"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_clear_cache"
        style="@style/mineitem"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/me_icon_cache"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/clear_cache"
            android:textColor="@color/home_tab_selected_color"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_text_color"
            android:textSize="12sp"
            tools:text="123MB"/>

    </LinearLayout>

</LinearLayout>